<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#BAB9BB"
    tools:context=".MainActivity">


    <!-- Guideline horizontal al 33% -->
    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@android:color/darker_gray"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.33" />

    <!-- Guideline vertical al 50% -->
    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_vertical"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.50" />

    <!-- ImageView que ocupa el 33% superior de la pantalla -->
    <ImageView
        android:id="@+id/imageView"
        android:layout_width="423dp"
        android:layout_height="247dp"
        android:scaleType="centerCrop"
        android:src="@drawable/madalenas"
        app:layout_constraintBottom_toTopOf="@id/guideline_horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <!-- TextView para la receta -->

    <TextView
        android:id="@+id/titulo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/common_paddimg_min"
        android:layout_marginTop="88dp"
        android:text="@string/titulo"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Headline3"
        android:textColor="#000000"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/autor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/common_paddimg_default"
        android:layout_marginTop="@dimen/common_paddimg_default"
        android:text="@string/autor"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Headline3"
        android:textColor="@color/white"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/titulo" />

    <TextView
        android:id="@+id/ingredientes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="#000000"
        android:layout_marginStart="@dimen/common_paddimg_default"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="@dimen/common_paddimg_default"
        android:text="@string/ingredientes"
        app:layout_constraintStart_toStartOf="@id/guideline_vertical"
        app:layout_constraintTop_toBottomOf="@id/guideline_horizontal" />

    <TextView
        android:id="@+id/descripcion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="#000000"
        android:layout_marginStart="@dimen/common_paddimg_default"
        android:layout_marginTop="@dimen/common_paddimg_min"
        android:layout_marginEnd="@dimen/common_paddimg_default"
        android:text="@string/descripcion"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/guideline_horizontal" />

    <TextView
        android:id="@+id/receta"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="188dp"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6"
        android:textColor="#000000"

        android:layout_marginTop="496dp"
        android:layout_marginBottom="233dp"
        android:text="@string/receta"

        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="178dp"
        android:layout_height="177dp"
        android:layout_marginStart="@dimen/common_paddimg_default"
        android:layout_marginTop="@dimen/common_paddimg_min"
        android:layout_marginEnd="@dimen/common_paddimg_default"
        android:text="@string/descripcionDetallada"
        app:layout_constraintEnd_toEndOf="@id/guideline_vertical"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/descripcion" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="226dp"
        android:layout_marginTop="26dp"
        android:layout_marginEnd="@dimen/common_paddimg_default"
        android:text="@string/IngredientosDetallados"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@id/textView"
        app:layout_constraintTop_toTopOf="@id/ingredientes" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="381dp"
        android:layout_height="114dp"
        android:layout_marginStart="@dimen/common_paddimg_default"
        android:layout_marginTop="50dp"


        android:text="@string/receta2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/receta"
        app:layout_goneMarginEnd="@dimen/common_paddimg_default" />

</androidx.constraintlayout.widget.ConstraintLayout>
